welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: ';' expected but '=' found.
nbPas: Int = 0
           ^Variables:4: error: ';' expected but '=' found.
dejaFait: Int = 0
              ^